--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -5,4 +5,7 @@
 	<langue code="en">
 		<traducteur nom="squonk" />
 	</langue>
+	<langue code="sk">
+		<traducteur nom="jaro" />
+	</langue>
 </traduction>
