--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -5,6 +5,7 @@
 	<langue code="en">
 		<traducteur nom="squonk" />
 	</langue>
+	<langue code="fr" />
 	<langue code="sk">
 		<traducteur nom="jaro" />
 	</langue>
