--- a/lang/paquet-dump.xml
+++ b/lang/paquet-dump.xml
@@ -1,4 +1,7 @@
 <traduction module="paquet-dump" gestionnaire="salvatore" url="http://trad.spip.org" source="svn://zone.spip.org/spip-zone/_core_/plugins/dump/lang/" reference="fr">
+	<langue code="en">
+		<traducteur nom="kent1" />
+	</langue>
 	<langue code="fr" />
 	<langue code="sk">
 		<traducteur nom="jaro" />
