--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -1,12 +1,12 @@
 <traduction module="dump" gestionnaire="salvatore" url="http://trad.spip.org" source="svn://zone.spip.org/spip-zone/_core_/plugins/dump/lang/" reference="fr">
 	<langue code="ar">
-		<traducteur nom="George" />
+		<traducteur nom="George" lien="http://trad.spip.org/auteur/جورج-قندلفت" />
 	</langue>
 	<langue code="en">
-		<traducteur nom="sQuonk" />
+		<traducteur nom="sQuonk" lien="http://trad.spip.org/auteur/squonk" />
 	</langue>
 	<langue code="fr" />
 	<langue code="sk">
-		<traducteur nom="jaro" />
+		<traducteur nom="jaro" lien="http://trad.spip.org/auteur/jaro" />
 	</langue>
 </traduction>
