--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -4,8 +4,13 @@
 	</langue>
 	<langue code="en">
 		<traducteur nom="sQuonk" lien="http://trad.spip.org/auteur/squonk" />
+		<traducteur nom="kent1" lien="http://trad.spip.org/auteur/kent1" />
 	</langue>
 	<langue code="fr" />
+	<langue code="nl">
+		<traducteur nom="gerbrand" lien="http://trad.spip.org/auteur/gerbrand" />
+		<traducteur nom="Suske" lien="http://trad.spip.org/auteur/suske" />
+	</langue>
 	<langue code="sk">
 		<traducteur nom="jaro" lien="http://trad.spip.org/auteur/jaro" />
 	</langue>
