--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -1,6 +1,6 @@
 <traduction module="dump" gestionnaire="salvatore" url="http://trad.spip.org" source="svn://zone.spip.org/spip-zone/_core_/plugins/dump/lang/" reference="fr">
 	<langue code="ar">
-		<traducteur nom="George" lien="http://trad.spip.org/auteur/جورج-قندلفت" />
+		<traducteur nom="George" lien="http://trad.spip.org/auteur/george" />
 	</langue>
 	<langue code="en">
 		<traducteur nom="sQuonk" lien="http://trad.spip.org/auteur/squonk" />
