--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -1,17 +1,17 @@
 <traduction module="dump" gestionnaire="salvatore" url="http://trad.spip.org" source="svn://zone.spip.org/spip-zone/_core_/plugins/dump/lang/" reference="fr">
-	<langue code="ar">
+	<langue code="ar" url="http://trad.spip.org/tradlang_module/dump?lang_cible=ar">
 		<traducteur nom="George" lien="http://trad.spip.org/auteur/جورج-قندلفت" />
 	</langue>
-	<langue code="en">
+	<langue code="en" url="http://trad.spip.org/tradlang_module/dump?lang_cible=en">
 		<traducteur nom="sQuonk" lien="http://trad.spip.org/auteur/squonk" />
 		<traducteur nom="kent1" lien="http://trad.spip.org/auteur/kent1" />
 	</langue>
 	<langue code="fr" />
-	<langue code="nl">
+	<langue code="nl" url="http://trad.spip.org/tradlang_module/dump?lang_cible=nl">
 		<traducteur nom="gerbrand" lien="http://trad.spip.org/auteur/gerbrand" />
 		<traducteur nom="Suske" lien="http://trad.spip.org/auteur/suske" />
 	</langue>
-	<langue code="sk">
+	<langue code="sk" url="http://trad.spip.org/tradlang_module/dump?lang_cible=sk">
 		<traducteur nom="jaro" lien="http://trad.spip.org/auteur/jaro" />
 	</langue>
 </traduction>
