--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -11,6 +11,9 @@
 		<traducteur nom="gerbrand" lien="http://trad.spip.org/auteur/gerbrand" />
 		<traducteur nom="Suske" lien="http://trad.spip.org/auteur/suske" />
 	</langue>
+	<langue code="ru" url="http://trad.spip.org/tradlang_module/dump?lang_cible=ru">
+		<traducteur nom="Serge Markitanenko" lien="http://trad.spip.org/auteur/serge-markitanenko" />
+	</langue>
 	<langue code="sk" url="http://trad.spip.org/tradlang_module/dump?lang_cible=sk">
 		<traducteur nom="jaro" lien="http://trad.spip.org/auteur/jaro" />
 	</langue>
