--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -16,6 +16,9 @@
 	<langue code="it" url="http://trad.spip.net/tradlang_module/dump?lang_cible=it">
 		<traducteur nom="phante" lien="http://trad.spip.net/auteur/phante" />
 	</langue>
+	<langue code="lb" url="http://trad.spip.net/tradlang_module/dump?lang_cible=lb">
+		<traducteur nom="jwander" lien="http://trad.spip.net/auteur/jwander" />
+	</langue>
 	<langue code="nl" url="http://trad.spip.net/tradlang_module/dump?lang_cible=nl">
 		<traducteur nom="gerbrand" lien="http://trad.spip.net/auteur/gerbrand" />
 		<traducteur nom="Suske" lien="http://trad.spip.net/auteur/suske" />
