--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -9,6 +9,9 @@
 		<traducteur nom="sQuonk" lien="http://trad.spip.net/auteur/squonk" />
 		<traducteur nom="kent1" lien="http://trad.spip.net/auteur/kent1" />
 	</langue>
+	<langue code="es" url="http://trad.spip.net/tradlang_module/dump?lang_cible=es">
+		<traducteur nom="dani" lien="http://trad.spip.net/auteur/dani" />
+	</langue>
 	<langue code="fa" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fa">
 		<traducteur nom="Davood Hossein" lien="http://trad.spip.net/auteur/davood-hossein" />
 	</langue>
