--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -17,6 +17,9 @@
 	</langue>
 	<langue code="fr" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fr" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 	</langue>
+	<langue code="fr_fem" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fr_fem" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+		<traducteur nom="denisb" lien="http://trad.spip.net/auteur/denisb" />
+	</langue>
 	<langue code="it" url="http://trad.spip.net/tradlang_module/dump?lang_cible=it" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="phante" lien="http://trad.spip.net/auteur/phante" />
 	</langue>
