--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -1,38 +1,125 @@
 <traduction module="dump" gestionnaire="salvatore" url="http://trad.spip.net" source="svn://zone.spip.org/spip-zone/_core_/plugins/dump/lang/" reference="fr">
-	<langue code="ar" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ar">
+	<langue code="ar" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ar" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="George" lien="http://trad.spip.net/auteur/جورج-قندلفت" />
 	</langue>
-	<langue code="de" url="http://trad.spip.net/tradlang_module/dump?lang_cible=de">
+	<langue code="ast" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ast" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="ay" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ay" total="41" traduits="1" relire="0" modifs="0" nouveaux="40" pourcent="2.44">
+	</langue>
+	<langue code="bg" url="http://trad.spip.net/tradlang_module/dump?lang_cible=bg" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="br" url="http://trad.spip.net/tradlang_module/dump?lang_cible=br" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="bs" url="http://trad.spip.net/tradlang_module/dump?lang_cible=bs" total="41" traduits="7" relire="0" modifs="5" nouveaux="29" pourcent="17.07">
+	</langue>
+	<langue code="ca" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ca" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+		<traducteur nom="merce" lien="http://trad.spip.net/auteur/merce" />
+	</langue>
+	<langue code="co" url="http://trad.spip.net/tradlang_module/dump?lang_cible=co" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="cpf" url="http://trad.spip.net/tradlang_module/dump?lang_cible=cpf" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="cpf_hat" url="http://trad.spip.net/tradlang_module/dump?lang_cible=cpf_hat" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="cs" url="http://trad.spip.net/tradlang_module/dump?lang_cible=cs" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="da" url="http://trad.spip.net/tradlang_module/dump?lang_cible=da" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="de" url="http://trad.spip.net/tradlang_module/dump?lang_cible=de" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="klaus++" lien="http://trad.spip.net/auteur/klaus" />
 	</langue>
-	<langue code="en" url="http://trad.spip.net/tradlang_module/dump?lang_cible=en">
+	<langue code="en" url="http://trad.spip.net/tradlang_module/dump?lang_cible=en" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="kent1" lien="http://trad.spip.net/auteur/kent1" />
 		<traducteur nom="sQuonk" lien="http://trad.spip.net/auteur/squonk" />
 	</langue>
-	<langue code="es" url="http://trad.spip.net/tradlang_module/dump?lang_cible=es">
+	<langue code="en_hx" url="http://trad.spip.net/tradlang_module/dump?lang_cible=en_hx" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="eo" url="http://trad.spip.net/tradlang_module/dump?lang_cible=eo" total="41" traduits="17" relire="0" modifs="0" nouveaux="24" pourcent="41.46">
+		<traducteur nom="Matthieu Marcillaud" lien="http://trad.spip.net/auteur/matthieu-marcillaud" />
+	</langue>
+	<langue code="es" url="http://trad.spip.net/tradlang_module/dump?lang_cible=es" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="dani" lien="http://trad.spip.net/auteur/dani" />
 	</langue>
-	<langue code="fa" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fa">
+	<langue code="eu" url="http://trad.spip.net/tradlang_module/dump?lang_cible=eu" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="fa" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fa" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="Davood Hossein" lien="http://trad.spip.net/auteur/davood-hossein" />
 	</langue>
-	<langue code="fr" />
-	<langue code="it" url="http://trad.spip.net/tradlang_module/dump?lang_cible=it">
+	<langue code="fi" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fi" total="41" traduits="7" relire="0" modifs="3" nouveaux="31" pourcent="17.07">
+	</langue>
+	<langue code="fon" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fon" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="fr" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fr" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	</langue>
+	<langue code="fr_fem" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fr_fem" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+		<traducteur nom="denisb" lien="http://trad.spip.net/auteur/denisb" />
+	</langue>
+	<langue code="fr_tu" url="http://trad.spip.net/tradlang_module/dump?lang_cible=fr_tu" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+	</langue>
+	<langue code="gl" url="http://trad.spip.net/tradlang_module/dump?lang_cible=gl" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="hu" url="http://trad.spip.net/tradlang_module/dump?lang_cible=hu" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="id" url="http://trad.spip.net/tradlang_module/dump?lang_cible=id" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="it" url="http://trad.spip.net/tradlang_module/dump?lang_cible=it" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="phante" lien="http://trad.spip.net/auteur/phante" />
 	</langue>
-	<langue code="lb" url="http://trad.spip.net/tradlang_module/dump?lang_cible=lb">
+	<langue code="it_fem" url="http://trad.spip.net/tradlang_module/dump?lang_cible=it_fem" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="ja" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ja" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="km" url="http://trad.spip.net/tradlang_module/dump?lang_cible=km" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="lb" url="http://trad.spip.net/tradlang_module/dump?lang_cible=lb" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="jwander" lien="http://trad.spip.net/auteur/jwander" />
 	</langue>
-	<langue code="nl" url="http://trad.spip.net/tradlang_module/dump?lang_cible=nl">
+	<langue code="my" url="http://trad.spip.net/tradlang_module/dump?lang_cible=my" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="nb" url="http://trad.spip.net/tradlang_module/dump?lang_cible=nb" total="41" traduits="7" relire="0" modifs="3" nouveaux="31" pourcent="17.07">
+	</langue>
+	<langue code="nl" url="http://trad.spip.net/tradlang_module/dump?lang_cible=nl" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="gerbrand" lien="http://trad.spip.net/auteur/gerbrand" />
 		<traducteur nom="Suske" lien="http://trad.spip.net/auteur/suske" />
 	</langue>
-	<langue code="pt" url="http://trad.spip.net/tradlang_module/dump?lang_cible=pt">
+	<langue code="oc_auv" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_auv" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="oc_gsc" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_gsc" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="oc_lms" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_lms" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="oc_lnc" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_lnc" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="oc_ni" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_ni" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="oc_ni_la" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_ni_la" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="oc_prv" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_prv" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="oc_va" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_va" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="pl" url="http://trad.spip.net/tradlang_module/dump?lang_cible=pl" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
+	</langue>
+	<langue code="pt" url="http://trad.spip.net/tradlang_module/dump?lang_cible=pt" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="Cláudia Anjos Lopes" lien="http://trad.spip.net/auteur/claudia_a_lopes" />
 	</langue>
-	<langue code="ru" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ru">
+	<langue code="pt_br" url="http://trad.spip.net/tradlang_module/dump?lang_cible=pt_br" total="41" traduits="20" relire="0" modifs="0" nouveaux="21" pourcent="48.78">
+		<traducteur nom="Ricardo Porto" lien="http://trad.spip.net/auteur/ricardo-porto" />
+	</langue>
+	<langue code="ro" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ro" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="ru" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ru" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="Serge Markitanenko" lien="http://trad.spip.net/auteur/serge-markitanenko" />
 	</langue>
-	<langue code="sk" url="http://trad.spip.net/tradlang_module/dump?lang_cible=sk">
+	<langue code="sk" url="http://trad.spip.net/tradlang_module/dump?lang_cible=sk" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="jaro" lien="http://trad.spip.net/auteur/jaro" />
+	</langue>
+	<langue code="sv" url="http://trad.spip.net/tradlang_module/dump?lang_cible=sv" total="41" traduits="9" relire="0" modifs="1" nouveaux="31" pourcent="21.95">
+	</langue>
+	<langue code="tr" url="http://trad.spip.net/tradlang_module/dump?lang_cible=tr" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
+	</langue>
+	<langue code="vi" url="http://trad.spip.net/tradlang_module/dump?lang_cible=vi" total="41" traduits="7" relire="0" modifs="5" nouveaux="29" pourcent="17.07">
+	</langue>
+	<langue code="zh" url="http://trad.spip.net/tradlang_module/dump?lang_cible=zh" total="41" traduits="7" relire="0" modifs="5" nouveaux="29" pourcent="17.07">
 	</langue>
 </traduction>
