[Salvatore] [source:_core_/plugins/dump/lang/ dump] Export depuis http://trad.spip.net
La langue 'ast' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'ay' devrait Ãªtre supprimÃ©e car trop peu traduite (2.44 %)
La langue 'bg' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'br' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'bs' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'ca' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'co' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'cpf' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'cpf_hat' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'cs' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'da' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'en_hx' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'eu' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'fi' devrait Ãªtre supprimÃ©e car trop peu traduite (24.39 %)
La langue 'fon' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'gl' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'hu' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'id' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'it_fem' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'ja' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'km' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'my' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'nb' devrait Ãªtre supprimÃ©e car trop peu traduite (24.39 %)
La langue 'oc_auv' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'oc_gsc' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'oc_lms' devrait Ãªtre supprimÃ©e car trop peu traduite (29.27 %)
La langue 'oc_l

--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -72,7 +72,7 @@
 	<langue code="km" url="http://trad.spip.net/tradlang_module/dump?lang_cible=km" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
 	</langue>
 	<langue code="lb" url="http://trad.spip.net/tradlang_module/dump?lang_cible=lb" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
-		<traducteur nom="jwander" lien="http://trad.spip.net/auteur/jwander" />
+		<traducteur nom="Jim Wanderscheid" lien="http://trad.spip.net/auteur/jwander" />
 	</langue>
 	<langue code="my" url="http://trad.spip.net/tradlang_module/dump?lang_cible=my" total="41" traduits="9" relire="0" modifs="3" nouveaux="29" pourcent="21.95">
 	</langue>
