--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -103,8 +103,9 @@
 	<langue code="pt" url="http://trad.spip.net/tradlang_module/dump?lang_cible=pt" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="Cláudia Anjos Lopes" lien="http://trad.spip.net/auteur/claudia_a_lopes" />
 	</langue>
-	<langue code="pt_br" url="http://trad.spip.net/tradlang_module/dump?lang_cible=pt_br" total="41" traduits="20" relire="0" modifs="0" nouveaux="21" pourcent="48.78">
+	<langue code="pt_br" url="http://trad.spip.net/tradlang_module/dump?lang_cible=pt_br" total="41" traduits="41" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="Ricardo Porto" lien="http://trad.spip.net/auteur/ricardo-porto" />
+		<traducteur nom="telopa" lien="http://trad.spip.net/auteur/telopa" />
 	</langue>
 	<langue code="ro" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ro" total="41" traduits="10" relire="0" modifs="2" nouveaux="29" pourcent="24.39">
 	</langue>
