--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -28,7 +28,8 @@
 	<langue code="de" url="http://trad.spip.net/tradlang_module/dump?lang_cible=de" total="42" traduits="41" relire="0" modifs="0" nouveaux="1" pourcent="97.62">
 		<traducteur nom="klaus++" lien="http://trad.spip.net/auteur/klaus" />
 	</langue>
-	<langue code="en" url="http://trad.spip.net/tradlang_module/dump?lang_cible=en" total="42" traduits="41" relire="0" modifs="0" nouveaux="1" pourcent="97.62">
+	<langue code="en" url="http://trad.spip.net/tradlang_module/dump?lang_cible=en" total="42" traduits="42" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+		<traducteur nom="Hanjo" lien="http://trad.spip.net/auteur/hanjo" />
 		<traducteur nom="kent1" lien="http://trad.spip.net/auteur/kent1" />
 		<traducteur nom="sQuonk" lien="http://trad.spip.net/auteur/squonk" />
 	</langue>
@@ -78,8 +79,9 @@
 	</langue>
 	<langue code="nb" url="http://trad.spip.net/tradlang_module/dump?lang_cible=nb" total="42" traduits="7" relire="0" modifs="3" nouveaux="32" pourcent="16.67">
 	</langue>
-	<langue code="nl" url="http://trad.spip.net/tradlang_module/dump?lang_cible=nl" total="42" traduits="41" relire="0" modifs="0" nouveaux="1" pourcent="97.62">
+	<langue code="nl" url="http://trad.spip.net/tradlang_module/dump?lang_cible=nl" total="42" traduits="42" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="gerbrand" lien="http://trad.spip.net/auteur/gerbrand" />
+		<traducteur nom="Hanjo" lien="http://trad.spip.net/auteur/hanjo" />
 		<traducteur nom="Suske" lien="http://trad.spip.net/auteur/suske" />
 	</langue>
 	<langue code="oc_auv" url="http://trad.spip.net/tradlang_module/dump?lang_cible=oc_auv" total="42" traduits="9" relire="0" modifs="3" nouveaux="30" pourcent="21.43">
