[Salvatore] [source:_core_/plugins/dump/lang/ dump] Export depuis http://trad.spip.net
La langue 'ast' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'ay' devrait Ãªtre supprimÃ©e car trop peu traduite (2.38 %)
La langue 'bg' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'br' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'bs' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'ca' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'co' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'cpf' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'cpf_hat' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'cs' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'da' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'en_hx' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'eu' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'fi' devrait Ãªtre supprimÃ©e car trop peu traduite (23.81 %)
La langue 'fon' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'gl' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'hu' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'id' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'it_fem' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'ja' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'km' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'my' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'nb' devrait Ãªtre supprimÃ©e car trop peu traduite (23.81 %)
La langue 'oc_auv' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'oc_gsc' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'oc_lms' devrait Ãªtre supprimÃ©e car trop peu traduite (28.57 %)
La langue 'oc_l

--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -118,7 +118,8 @@
 	</langue>
 	<langue code="ro" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ro" total="42" traduits="10" relire="0" modifs="2" nouveaux="30" pourcent="23.81">
 	</langue>
-	<langue code="ru" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ru" total="42" traduits="41" relire="0" modifs="0" nouveaux="1" pourcent="97.62">
+	<langue code="ru" url="http://trad.spip.net/tradlang_module/dump?lang_cible=ru" total="42" traduits="42" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+		<traducteur nom="olly" lien="http://trad.spip.net/auteur/olly" />
 		<traducteur nom="Serge Markitanenko" lien="http://trad.spip.net/auteur/serge-markitanenko" />
 	</langue>
 	<langue code="sk" url="http://trad.spip.net/tradlang_module/dump?lang_cible=sk" total="42" traduits="42" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
@@ -127,6 +128,10 @@
 	<langue code="sv" url="http://trad.spip.net/tradlang_module/dump?lang_cible=sv" total="42" traduits="9" relire="0" modifs="1" nouveaux="32" pourcent="21.43">
 	</langue>
 	<langue code="tr" url="http://trad.spip.net/tradlang_module/dump?lang_cible=tr" total="42" traduits="10" relire="0" modifs="2" nouveaux="30" pourcent="23.81">
+	</langue>
+	<langue code="uk" url="http://trad.spip.net/tradlang_module/dump?lang_cible=uk" total="42" traduits="42" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+		<traducteur nom="olly" lien="http://trad.spip.net/auteur/olly" />
+		<traducteur nom="Retenodus" lien="http://trad.spip.net/auteur/retenodus" />
 	</langue>
 	<langue code="vi" url="http://trad.spip.net/tradlang_module/dump?lang_cible=vi" total="42" traduits="7" relire="0" modifs="5" nouveaux="30" pourcent="16.67">
 	</langue>
