[Salvatore] [source:_core_/plugins/dump/lang/ dump] Export depuis http://trad.spip.net de la langue br

--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -8,7 +8,8 @@
 	</langue>
 	<langue code="bg" url="https://trad.spip.net/tradlang_module/dump?lang_cible=bg" total="42" traduits="9" relire="0" modifs="3" nouveaux="30" pourcent="21.43">
 	</langue>
-	<langue code="br" url="https://trad.spip.net/tradlang_module/dump?lang_cible=br" total="42" traduits="10" relire="0" modifs="2" nouveaux="30" pourcent="23.81">
+	<langue code="br" url="https://trad.spip.net/tradlang_module/dump?lang_cible=br" total="42" traduits="34" relire="0" modifs="2" nouveaux="6" pourcent="80.95">
+		<traducteur nom="nonobreizh" lien="https://trad.spip.net/auteur/nonobreizh" />
 	</langue>
 	<langue code="bs" url="https://trad.spip.net/tradlang_module/dump?lang_cible=bs" total="42" traduits="7" relire="0" modifs="5" nouveaux="30" pourcent="16.67">
 	</langue>
