--- a/lang/dump.xml
+++ b/lang/dump.xml
@@ -75,7 +75,8 @@
 	</langue>
 	<langue code="it_fem" url="https://trad.spip.net/tradlang_module/dump?lang_cible=it_fem" total="42" traduits="10" relire="0" modifs="2" nouveaux="30" pourcent="23.81">
 	</langue>
-	<langue code="ja" url="https://trad.spip.net/tradlang_module/dump?lang_cible=ja" total="42" traduits="9" relire="0" modifs="3" nouveaux="30" pourcent="21.43">
+	<langue code="ja" url="https://trad.spip.net/tradlang_module/dump?lang_cible=ja" total="42" traduits="42" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
+		<traducteur nom="origenius" lien="https://trad.spip.net/auteur/origenius" />
 	</langue>
 	<langue code="km" url="https://trad.spip.net/tradlang_module/dump?lang_cible=km" total="42" traduits="9" relire="0" modifs="3" nouveaux="30" pourcent="21.43">
 	</langue>
