--- a/lang/paquet-dump.xml
+++ b/lang/paquet-dump.xml
@@ -1,9 +1,9 @@
 <traduction
 	module="paquet-dump"
-	id="paquet-dump--dump-beeec"
+	id="paquet-dump--dump-525a1"
 	gestionnaire="salvatore"
 	url="https://trad.spip.net"
-	source="svn://zone.spip.org/spip-zone/_core_/plugins/dump/lang"
+	source="https://git.spip.net/spip/dump.git"
 	reference="fr">
 	<langue code="ar" url="https://trad.spip.net/tradlang_module/paquet-dump?lang_cible=ar" total="2" traduits="2" relire="0" modifs="0" nouveaux="0" pourcent="100.00">
 		<traducteur nom="George" lien="https://trad.spip.net/auteur/جورج-قندلفت" />
